@@ -57,6 +57,12 @@ SET(API_SRCS
     auditimpl.cpp
     )
 
+IF (NOT ZORBA_NO_FULL_TEXT)
+  LIST(APPEND API_SRCS
+    stemmer.cpp
+    stemmer_wrapper.cpp)
+ENDIF (NOT ZORBA_NO_FULL_TEXT)
+
 ADD_SRC_SUBFOLDER(API_SRCS serialization API_SERIALIZATION_SRCS)
 
 SET(API_BUILD_SRCS
