@@ -73,10 +73,11 @@ SET(UNIT_TESTS_SRCS
   staticcollectionmanager.cpp
 )
 
-IF(NOT ZORBA_NO_FULL_TEXT)
+IF (NOT ZORBA_NO_FULL_TEXT)
   LIST(APPEND UNIT_TESTS_SRCS
+    stemmer.cpp
     tokenizer.cpp)
-ENDIF(NOT ZORBA_NO_FULL_TEXT)
+ENDIF (NOT ZORBA_NO_FULL_TEXT)
 
 # multithread_simple.cpp
 # multithread_stress_test.cpp
