@@ -2,6 +2,7 @@ Zorba - The XQuery Processor
 
 version 2.1
 
+    - Custom Full-text stemming.
     - Custom Full-text tokenization.
 
 version 2.0
